--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,8 @@ firmware/build/
 firmware/sdkconfig.old
 firmware/.vscode/
 
-# Flutter build files
-app/build/
-app/.dart_tool/
-app/.packages
-app/.metadata
-app/.flutter-plugins
-app/.flutter-plugins-dependencies
+# QR Codes
+qr_generator/qr_codes/.*
 
 # IDE files
 .vscode/
