--- a/firmware/main/Kconfig
+++ b/firmware/main/Kconfig
@@ -1,22 +1,34 @@
+
 menu "RGBW LED Controller Configuration"
 
     choice BOARD_TYPE
         prompt "Board Type"
         default BOARD_ESP32C3_NO_OLED
         help
-            Select the board type to configure GPIO pins and LED driver optimization.
+            Select your board type. All other settings (GPIO, PWM frequency, etc.) 
+            will be automatically configured for optimal performance.
 
         config BOARD_ESP32C3_OLED
             bool "ESP32-C3 with OLED (AL8860 driver)"
             help
                 ESP32-C3 board with OLED display, optimized for AL8860 LED driver.
-                Uses 8-bit PWM resolution and lower switching frequency.
+                
+                Automatic settings:
+                - PWM: 1000Hz, 8-bit resolution
+                - GPIO: R=10, G=9, B=8, WW=7  
+                - Max current: 1500mA per channel
+                - Optimized for hysteretic control
 
         config BOARD_ESP32C3_NO_OLED
             bool "ESP32-C3 without OLED (LM3414 driver)"
             help
                 ESP32-C3 board without OLED display, optimized for LM3414 LED driver.
-                Uses 12-bit PWM resolution and higher switching frequency.
+                
+                Automatic settings:
+                - PWM: 5000Hz, 12-bit resolution
+                - GPIO: R=5, G=6, B=7, WW=8
+                - Max current: 1000mA per channel  
+                - Optimized for precision control
 
     endchoice
 
@@ -27,51 +39,31 @@ menu "RGBW LED Controller Configuration"
             The BLE device name that will be advertised. Change this for each device.
             Examples: RGBW_LED_001, RGBW_LED_002, etc.
 
-    menu "LED Driver Configuration"
-
-        config LED_MAX_CURRENT_MA
-            int "Maximum LED Current (mA)"
-            default 1000 if BOARD_ESP32C3_NO_OLED
-            default 1500 if BOARD_ESP32C3_OLED
-            range 100 2000
-            help
-                Maximum current per LED channel in milliamps.
-
-        config PWM_FREQUENCY_HZ
+    menu "Current Configuration (Read-Only)"
+        
+        config INFO_PWM_FREQ
             int "PWM Frequency (Hz)"
-            default 5000 if BOARD_ESP32C3_NO_OLED
             default 1000 if BOARD_ESP32C3_OLED
-            range 100 10000
+            default 5000 if BOARD_ESP32C3_NO_OLED
             help
-                PWM switching frequency. Higher frequency for LM3414, lower for AL8860.
+                Automatically set PWM frequency based on board type.
+                This is read-only and optimized for your LED driver.
 
-    endmenu
+        config INFO_MAX_CURRENT
+            int "Max Current per Channel (mA)"
+            default 1500 if BOARD_ESP32C3_OLED
+            default 1000 if BOARD_ESP32C3_NO_OLED
+            help
+                Automatically set maximum current based on board type.
+                This is read-only and optimized for your LED driver.
 
-    menu "GPIO Pin Configuration"
-
-        config GPIO_RED
-            int "Red LED GPIO"
-            default 5 if BOARD_ESP32C3_NO_OLED
-            default 10 if BOARD_ESP32C3_OLED
-            range 0 21
-
-        config GPIO_GREEN
-            int "Green LED GPIO"
-            default 6 if BOARD_ESP32C3_NO_OLED
-            default 9 if BOARD_ESP32C3_OLED
-            range 0 21
-
-        config GPIO_BLUE
-            int "Blue LED GPIO"
-            default 7 if BOARD_ESP32C3_NO_OLED
+        config INFO_PWM_BITS
+            int "PWM Resolution (bits)"
             default 8 if BOARD_ESP32C3_OLED
-            range 0 21
-
-        config GPIO_WARM_WHITE
-            int "Warm White LED GPIO"
-            default 8 if BOARD_ESP32C3_NO_OLED
-            default 7 if BOARD_ESP32C3_OLED
-            range 0 21
+            default 12 if BOARD_ESP32C3_NO_OLED
+            help
+                Automatically set PWM resolution based on board type.
+                AL8860: 8-bit (256 levels), LM3414: 12-bit (4096 levels)
 
     endmenu
 
